--- a/src/pages/Work/Work.css
+++ b/src/pages/Work/Work.css
@@ -23,6 +23,7 @@
 
 .work__img-wrapper {
   position: relative;
+  margin-bottom: 1em;
 }
 
 .work__img-wrapper::after {
